<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">cmpe285healthmobile</string>
    <string name="add_textbox_hint">Add a ToDo item</string>
    <string name="add_button_text">Add</string>
    <string name="mobile_services">Mobile Services </string>
    <string name="menu_refresh">Refresh</string>
    <string name="checkbox_text">Item Text</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_hospital">INSTA HEALTH</string>
    <string name="get_details_button">Get Hospital Details</string>
    <string name="get_directions">Get Directions</string>
    <string name="title_activity_parking">ParkingActivity</string>
    <string name="hospitalText">Select Hospital</string>
    <string name="totalText">Total Parking Slots</string>
    <string name="disableText">Disable Parking Slots</string>
    <string name="costText">Cost </string>
    <string name="healthTips">Health Tips</string>
    <string name="physName">Physician Name: </string>
    <string name="specIn">Specialist in: </string>
    <string name="hosp">Hospital: </string>
    <string name="desc">Description: </string>
    <string name="rating">Rating(out of 5): </string>
    <string name="date">Date of Appointment: </string>
    <string name="ptime">Preferred Time: </string>
    <string name="timehint">--:-- -- </string>
    <string name="emailhint">someone@example.com</string>
    <string name="pwdhint">Password</string>
    <string name="contacthint">(###)###-####</string>
    <string name="pemail">Patient email: </string>
    <string name="pcontact">Patient Contact#: </string>
    <string name="helpline">Hospital Helpline number: </string>
    <string name="ambulanceName">Ambulance Name: </string>
    <string name="providerAddress">Provider Address: </string>
    <string name="ambulanceNo">Ambulance Ph: </string>
    <string name="username">Username: </string>
    <string name="pwd">Password: </string>
    <string name="login">Login</string>    
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="email">Email</string>
    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="zip">Zip</string>
    <string name="mobile">Mobile No.</string>
    <string name="homeph">Home Phone No.</string>
    <string name="submit">Submit</string>
    <string name="reset">Reset</string>
    <string name="getDetails">Details</string>
    <string name="sendEmail">Send Email</string>
    <string name="call">Call Phone</string>
    
    <string name="newline">\n</string>

    <style name="textStyle">
        <item name="android:layout_width">wrap_content</item>
        <item name="android:layout_height">wrap_content</item>
        <item name="android:gravity">center</item>
        <item name="android:visibility">gone</item>
        <item name="android:layout_centerInParent">true</item>
    </style>

    <style name="textStyle2">
        <item name="android:layout_width">wrap_content</item>
        <item name="android:layout_height">wrap_content</item>
        <item name="android:gravity">center</item>
        <item name="android:layout_centerInParent">true</item>
    </style>
    
    <style name="textStyle3">
        <item name="android:layout_width">wrap_content</item>
        <item name="android:layout_height">wrap_content</item>
    </style>

    <string name="title_activity_health_tips">HealthTipsActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_list_adapter">ListAdapter</string>
    <string name="title_activity_physician">PhysicianActivity</string>
    <string name="title_activity_appointment">AppointmentActivity</string>
    <string name="title_activity_helpline">HelplineActivity</string>
    <string name="title_activity_ambulance">AmbulanceActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_sign_up">SignUpActivity</string>

</resources>