<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.cmpe285healthproject.SignUpActivity" >

      <WebView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"      
        android:id="@+id/webView" />
        
	 <TextView
		android:id="@+id/firstname_text"
     	style="@style/textStyle3"
     	android:textColor="#0000FF"
     	android:layout_marginTop="10dp"
     	android:text="@string/firstname"
     	android:textStyle="bold"   	
    	android:layout_below="@+id/webView"
   	    />
	 <EditText
		android:id="@+id/firstname"
     	style="@style/textStyle3"  
     	android:layout_height="30dp" 
     	android:layout_marginLeft="10dp" 
       	android:layout_toRightOf="@+id/firstname_text"
    	android:layout_below="@+id/webView"
     	/>

	 
	 <TextView
		android:id="@+id/lastname_text"
     	style="@style/textStyle3"  
     	android:textColor="#0000FF"
     	android:layout_marginTop="10dp"
     	android:text="@string/lastname"
     	android:textStyle="bold"   	
    	android:layout_below="@+id/firstname"
   	    />
	 <EditText
		android:id="@+id/lastname"
     	style="@style/textStyle3"  
     	android:layout_height="30dp"  
     	android:layout_marginLeft="10dp" 
       	android:layout_toRightOf="@+id/lastname_text"
    	android:layout_below="@+id/firstname"
    	android:inputType="textPassword"
    	     	/>
	 
	 <TextView
		android:id="@+id/email_text"
     	style="@style/textStyle3"
     	android:textColor="#0000FF"
     	android:text="@string/email"
     	android:layout_marginTop="10dp"
     	android:textStyle="bold"   	
    	android:layout_below="@+id/lastname_text"
   	    />
	 <EditText
		android:id="@+id/email"
     	style="@style/textStyle3"
     	android:layout_height="30dp"  
     	android:layout_marginLeft="10dp" 
       	android:layout_toRightOf="@+id/email_text"
    	android:layout_below="@+id/lastname"
     	android:inputType="textEmailAddress"   	    
		android:hint="@string/emailhint"
     	/>
	 
	 <TextView
		android:id="@+id/pwd_text"
     	style="@style/textStyle3" 
     	android:textColor="#0000FF"
     	android:layout_marginTop="10dp"
     	android:text="@string/pwd"
     	android:textStyle="bold"   	
    	android:layout_below="@+id/email_text"
   	    />
	 <EditText
		android:id="@+id/pwd"
     	style="@style/textStyle3" 
     	android:layout_height="30dp"  
     	android:layout_marginLeft="10dp"  
       	android:layout_toRightOf="@+id/pwd_text"
    	android:layout_below="@+id/email"
    	android:inputType="textPassword"
		android:hint="@string/pwdhint"
     	/>
	 
	 <TextView
		android:id="@+id/address_text"
     	style="@style/textStyle3"   	
     	android:textColor="#0000FF"
     	android:layout_marginTop="10dp"
     	android:text="@string/address"
     	android:textStyle="bold"   	
    	android:layout_below="@+id/pwd_text"
   	    />
	 <EditText
		android:id="@+id/address"
     	style="@style/textStyle3"
     	android:layout_marginLeft="10dp" 
     	android:layout_height="30dp"    
       	android:layout_toRightOf="@+id/address_text"
    	android:layout_below="@+id/pwd"
     	/>
	 
	 <TextView
		android:id="@+id/city_text"
     	style="@style/textStyle3"   	
     	android:textColor="#0000FF"
     	android:layout_marginTop="10dp"
     	android:text="@string/city"
     	android:textStyle="bold"   	
    	android:layout_below="@+id/address_text"
   	    />
	 <EditText
		android:id="@+id/city"
     	style="@style/textStyle3"  
     	android:layout_marginLeft="10dp" 
     	android:layout_height="30dp" 
       	android:layout_toRightOf="@+id/city_text"
    	android:layout_below="@+id/address"
     	/>
	 
	 <TextView
		android:id="@+id/state_text"
     	style="@style/textStyle3"   	
     	android:textColor="#0000FF"
     	android:text="@string/state"
     	android:layout_marginTop="10dp"
     	android:textStyle="bold"   	
    	android:layout_below="@+id/city_text"
   	    />
	 <EditText
		android:id="@+id/state"
     	style="@style/textStyle3"
     	android:layout_height="30dp"  
     	android:layout_marginLeft="10dp"  
       	android:layout_toRightOf="@+id/state_text"
    	android:layout_below="@+id/city"
    	android:inputType="textPassword"
		android:hint="@string/pwdhint"
     	/>
	 
	 <TextView
		android:id="@+id/zip_text"
     	style="@style/textStyle3"   
     	android:layout_marginTop="10dp"	
     	android:textColor="#0000FF"
     	android:text="@string/zip"
     	android:textStyle="bold"   	
    	android:layout_below="@+id/state_text"
   	    />
	 <EditText
		android:id="@+id/zip"
     	style="@style/textStyle3"
     	android:layout_height="30dp"   
     	android:layout_marginLeft="10dp" 
       	android:layout_toRightOf="@+id/zip_text"
    	android:layout_below="@+id/state"
    	android:inputType="phone"
     	/>
	 
	 <TextView
		android:id="@+id/mobile_text"
     	style="@style/textStyle3"   	
     	android:textColor="#0000FF"
     	android:layout_marginTop="10dp"	
     	android:text="@string/mobile"
     	android:textStyle="bold"   	
    	android:layout_below="@+id/zip_text"
   	    />
	 <EditText
		android:id="@+id/mobile"
     	style="@style/textStyle3"  
     	android:layout_height="30dp" 
     	android:layout_marginLeft="10dp" 
       	android:layout_toRightOf="@+id/mobile_text"
    	android:layout_below="@+id/zip"
		android:inputType="phone"
		android:hint="@string/contacthint"
     	/>
	 
	  <TextView
		android:id="@+id/homeph_text"
     	style="@style/textStyle3"   	
     	android:textColor="#0000FF"
     	android:layout_marginTop="10dp"
     	android:text="@string/homeph"
     	android:textStyle="bold"   	
    	android:layout_below="@+id/mobile_text"
   	    />
	 <EditText
		android:id="@+id/homeph"
     	style="@style/textStyle3"  
     	android:layout_height="30dp" 
     	android:layout_marginLeft="10dp" 
       	android:layout_toRightOf="@+id/homeph_text"
    	android:layout_below="@+id/mobile"
		android:inputType="phone"
		android:hint="@string/contacthint"
     	/>
	 
	 
	 <Button
        android:id="@+id/submit"
        style="@style/textStyle3" 
        android:layout_marginTop="15dp"
        android:text="@string/submit"  	
        android:layout_below="@+id/homeph_text"
         />
	 
	  <Button
        android:id="@+id/reset"
        style="@style/textStyle3"   
        android:text="@string/reset"
        android:layout_marginTop="15dp"	
        android:layout_toRightOf="@+id/submit"
        android:layout_below="@+id/homeph_text"
         />
	  
	 <TextView
		android:id="@+id/error"
     	style="@style/textStyle"   	
     	android:textColor="#ff0000"
    	android:layout_below="@+id/reset"
   	    />
	 

</RelativeLayout>
