<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.cmpe285healthproject.LoginActivity" >

    <WebView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"      
        android:id="@+id/webView" />

	 
	 <TextView
		android:id="@+id/username_text"
     	style="@style/textStyle3"   	
     	android:textColor="#0000FF"
     	android:layout_marginTop="20dp"
     	android:text="@string/username"
     	android:textStyle="bold"   	
    	android:layout_below="@+id/webView"
   	    />
	 <EditText
		android:id="@+id/username"
     	style="@style/textStyle3"  
       	android:layout_toRightOf="@+id/username_text"
    	android:layout_below="@+id/webView"
		android:hint="@string/emailhint"
     	android:inputType="textEmailAddress"   	    
     	/>

	 
	 <TextView
		android:id="@+id/pwd_text"
     	style="@style/textStyle3"   	
     	android:textColor="#0000FF"
     	android:layout_marginTop="20dp"
     	android:text="@string/pwd"
     	android:textStyle="bold"   	
    	android:layout_below="@+id/username"
   	    />
	 <EditText
		android:id="@+id/pwd"
     	style="@style/textStyle3"  
       	android:layout_toRightOf="@+id/pwd_text"
    	android:layout_below="@+id/username"
    	android:inputType="textPassword"
		android:hint="@string/pwdhint"
     	/>
	 
	 
	 <Button
        android:id="@+id/login"
        style="@style/textStyle3"   	
        android:layout_below="@+id/pwd_text"
        android:layout_marginTop="30dp"
        android:text="@string/login" />
	 
	 
	 <TextView
		android:id="@+id/error"
     	style="@style/textStyle"   	
     	android:textColor="#ff0000"
    	android:layout_below="@string/login"
   	    />
	 
</RelativeLayout>
